--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,8 +1,21 @@
 name: Events Demo 1
 on:
   pull_request:
-    types: [opened, edited]
+    types:
+      - opened
+    branches:
+      - master # master
+      - 'dev-*' # dev-new dev-this-is-new
+      - 'feat/**' # feat/new feat/new/button   
   workflow_dispatch:
+  push:
+    branches:
+      - master # master
+      - 'dev-*' # dev-new dev-this-is-new
+      - 'feat/**' # feat/new feat/new/button
+      # developer-1
+    paths-ignore:
+      - '.github/workflows/*'
 jobs:
   deploy:
     runs-on: ubuntu-latest
