--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,8 +1,5 @@
 name: Events Demo 1
-on:
-  pull_request:
-    types: [opened, edited]
-  workflow_dispatch:
+on: [push, workflow_dispatch]
 jobs:
   deploy:
     runs-on: ubuntu-latest
